# rep-code_experiment

./: .gitignore  README.md  pyproject.toml
dataset/: add_device_characterization.py  add_metadata.py  change_device_characterization.py  change_names.py  combine_runs.py  combine_states.py  convert_to_xarray.py  convert_to_xarray_standard.py  get_defects.py  get_defects_experiment.py  get_defects_simulation.py  get_state_probs.py  run_classifier.py  run_three-state_classifier.py  run_two-state_classifier.py  run_two-state_classifier_ps.py  simulate_data.py  simulate_defects_from_dem.py  split_dataset.py
dataset/configs/: device_characterization.yaml
defect_analysis/: plot_defect_histogram.py  plot_defect_histogram_ancillas.py  plot_defect_histogram_rounds.py  plot_defect_histogram_split.py  plot_defect_rates.py  plot_pij.py  plot_prob_defect_histogram.py  plot_state_probs.py
error_budget/: decode.py  get_defects.py  plot_epsL_vs_noise.py  simulate_data.py
error_budget/configs/: circ_level_noise.yaml  config_data_scan_.yaml  config_data_scan_assing_error_prob.yaml  config_data_scan_cz_error_prob.yaml  config_data_scan_meas_error_prob.yaml  config_data_scan_sq_error_prob.yaml  rep_code_layout_d5.yaml
mwpm_decoder/: decode.py  get_dem.py  get_dem_estimated.py  get_dem_exp-circ-level.py  get_dem_t1t2.py  plot_dem.py  plot_logical_performance.py  plot_logical_performance_compare.py
nn_decoder/: plot_training_analysis.py  prepare_datasets.py  run_training.sh  train.py  training_analysis.py
rep_code/: __init__.py  defects.py  readout.py
tests/: test_rep_code.py
(+26 files in other folders)
