[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8.12"
name = "rep_code"
description = "Analysis of the repetition code" 
version = "0.1.0"
authors = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
maintainers = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy",
    "dem_estimation @ git+ssh://git@github.com/MarcSerraPeralta/dem_estimation",
    "iq_readout @ git+ssh://git@github.com/MarcSerraPeralta/iq_readout",
    "qec_util @ git+ssh://git@github.com/BorisVarbanov/qec-util",
    "surface_sim @ git+ssh://github.com/BorisVarbanov/surface-sim"
]
keywords = ["repetition code", "qec", "decoders"]

[tool.setuptools.packages.find]
include = ["rep_code"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "scalene"]

